--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,3 +32,56 @@ main {
   text-align: center;
   margin: auto;
 }
+
+section {
+  margin: 5% 0;
+}
+
+article.tweet {
+  border: 4px solid #2c2c2c;
+  padding: 1%;
+}
+
+article.tweet header {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  padding: 0 3%;
+  margin: 1% 0;
+}
+
+article.tweet header .username {
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #69bde4ce;
+}
+
+article.tweet .avi {
+  color: #69bde4ce;
+  font-size: 2rem;
+}
+
+article > .tweet-body {
+  font-size: 0.85em;
+  font-weight: 600;
+  text-align: left;
+  margin: 1%;
+  padding: 2%;
+  border-bottom: 3px solid #2c2c2c;
+}
+
+article.tweet footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1% 3%;
+  font-size: 0.7em;
+  color: #2c2c2c
+}
+
+.tweet-icons {
+color: #273886
+}
+
+.tweet-icons i:hover {
+  color: #b99e04;
+}
