add css for back-to-top btn, modify nav background

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -50,7 +50,8 @@ nav {
   height: 120px;
   width: 100%;
   background-color: #359189;
-  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+  /* background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png"); */
+  background-image: url("../images/y-so-serious.png");
   color: #FFFFFF;
   display: flex;
   align-items: center;
