--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,10 @@
 .head {
-  /* background: coral; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #359189;
-background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+  background-image: url("../images/y-so-serious.png");
+  height: 400px;
+  color: white;
+  /* z-index: -1; */
 }
