--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,6 @@
 textarea {
   border: 0px;
-  background-color: #f4f1ec;
+  background-color: transparent;
   width: 100%;
   height: 40px;
   resize: none;
