--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 nav {
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
+  background-color: #252626;
   color: #FFFFFF;
   display: flex;
   align-items: center;
